v1.2.7 (2021-??-??)

New Features
------------

- Add MSVS 2022 support.

Enhancements
------------

- Automatically create output directory in "gnu" toolset if necessary.
- Allow using "arm64" architecture name (useful with "gnu-osx" toolset).
- Don't use "liblib" in the output libraries names with Unix toolsets.

v1.2.6 (2020-10-17)
===================

New Features
------------

- Add MSVS 2015, 2017 and 2019 toolsets support.
- Add "msvs" version-independent MSVS toolset.
- Allow specifying configurations/platforms for external projects.
- Support including user-defined property sheets in MSVS 201x toolsets.
- Add "inputs" property for action targets.
- Add "allow-undefined" target property.

Bug fixes
---------

- Changing variable appearing in "source" statement of a base template
  from the derived target now works as expected.
- Respect default value of "AdditionalIncludeDirectories" in MSVS projects.
- Simplify paths involving $(builddir) in the "gnu" toolset output.
- Generate correct warning options for "suncc" backend.
- Fix linking shared libraries with Sun toolset, use "-lc" explicitly.

v1.2.5 (2014-07-28)
===================

New Features
------------

- Support "config" variable for choosing debug/release configuration in
  "gnu" toolset.
- Support "builddir" variable in "gnu" toolset for out of source builds.
- Allow specifying "outputs" property for the actions in makefiles.
- Allow using settings with MSVS toolsets.
- Generate makefiles which don't allow creation of shared libraries or
  loadable modules with undefined symbols.

Bug fixes
---------

- Don't define _USRDLL unnecessarily in the generated MSVS projects.
- Use correct (-Kpic) flag with Sun cc C compiler instead of wrong "-pic".

Other Changes
-------------

- Include ANTLR 3.5.1 binaries in the source tree to make Bakefile build out
  of the box without any extra dependencies.